Added steps list

--- a/recipes/nasi.html
+++ b/recipes/nasi.html
@@ -10,7 +10,7 @@
 		<h2>Description</h2>
 		<p>Nasi Goreng is one of the most delicious dishes in the world. It consists of <strong>baked rice</strong> with pieces of <strong>(chicken) meat</strong> and pieces of <strong>cooked vegetables</strong>, as well as some <strong>nasi mix materials</strong>. This results in a warm and rich collection of foods.</p>
 		<p>It is not difficult to make. Follow the recipe and you will have your own amazing meal in no time!</p>
-		<br>
+		<h2>Ingredients</h2>
 		<ul>
 			<li>4 Gloves of Garlic</li>
 			<li>1 Medium Onion, Sliced</li>
@@ -24,5 +24,15 @@
 			<li>3-4 Cups of Cooked Rice</li>
 			<li>4-6 Tablespoons of Cooking Oil</li>
 		</ul>
+		<h2>Steps</h2>
+		<ol>
+			<li>First, in a wok with a little bit of oil, add in the garlic, onions, chilies, ginger and anchovies. Fry until they are fragrant and the anchovies are crispy.</li>
+			<li>Then, remove and place it into a pestle and mortar. Pound the ingredients until it becomes a fine paste. Set aside.</li>
+			<li>In the same wok with the leftover oil, add in the pounded ingredients and lightly fry it.</li>
+			<li>Push the ingredients inside and crack 2 eggs in. Pour over the soy sauce onto the eggs and let it cook for 10 seconds then break the eggs up and mix it up with the chili paste.</li>
+			<li>Then, add in the frozen peas and the cooked rice. Mix it all together until combined.</li>
+			<li>Add in some salt and continue mixing. Cook until the rice starts to steam up.</li>
+			<li>Once done, remove from the heat and serve immediately in a bowl.</li>
+		</ol>
 	</body>
 </html>
