fixed tagging mistakes and typo's

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
 		<h1>Pizza Tonno</h1>
 		<img src="https://media-cdn.tripadvisor.com/media/photo-s/0d/06/44/58/pizza-tonno.jpg" alt="A baked pizza topped with tuna and red onion.">
 		<h2>Description</h2>
-		<p>Pizza Tonno is a special kind of pizza. Instead of the usual meat, this pizza is topped with <strong>fish!</strong>. Even better, you can divide the pizza into multiple pieces, making it easy to share with friends.</p>
+		<p>Pizza Tonno is a special kind of pizza. Instead of the usual meat, this pizza is topped with <strong>tuna</strong> and <strong>red onions</strong>! Even better, you can divide the pizza into multiple pieces, making it easy to share with friends.</p>
 		<p>It is not difficult to make. Follow the recipe and you will have your own amazing meal in no time!</p>
 		<h2>Ingredients</h2>
 		<ul>
