--- a/recipes/boerenkool.html
+++ b/recipes/boerenkool.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Boerenkool</title>
+		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 	<body>
 		<h1>Boerenkool</h1>
